--- a/docs/develop/node/gettingstarted/index-gettingstarted.mdx
+++ b/docs/develop/node/gettingstarted/index-gettingstarted.mdx
@@ -113,10 +113,10 @@ Find more information about Redis & node-redis connections in the "[Redis Connec
 
 ---
 
-###  Redis Marketplace
+###  Redis Launchpad
 
-Redis Marketplace is like an “App Store” for Redis sample apps. You can easily find apps for your preferred frameworks and languages.
-Below are few of these apps. [Click here to access the complete lists of apps](https://marketplace.redis.com).
+Redis Launchpad is like an “App Store” for Redis sample apps. You can easily find apps for your preferred frameworks and languages.
+Below are few of these apps. [Click here to access the complete lists of apps](https://launchpad.redis.com).
 
 <div class="row text--center">
 
@@ -127,7 +127,7 @@ Below are few of these apps. [Click here to access the complete lists of apps](h
 
 ![marketplace](images/hackernews.png)
 
-[A Hacker News Clone project](https://marketplace.redis.com/?id=project%3Aredis-hacker-news-demo) built in NextJS, NodeJS and Express based on RediSearch & RedisJSON
+[A Hacker News Clone project](https://launchpad.redis.com/?id=project%3Aredis-hacker-news-demo) built in NextJS, NodeJS and Express based on RediSearch & RedisJSON
 </div>
 </div>
 
@@ -138,7 +138,7 @@ Below are few of these apps. [Click here to access the complete lists of apps](h
 
 ![marketplace](images/shoppingcartnodejs.png)
 
-[Shopping Cart app in NodeJS](https://marketplace.redis.com/?id=project%3Abasic-redis-shopping-chart-nodejs) module functionalities
+[Shopping Cart app in NodeJS](https://launchpad.redis.com/?id=project%3Abasic-redis-shopping-chart-nodejs) module functionalities
 </div>
 </div>
 </div>
