--- a/docs/develop/golang/index-golang.mdx
+++ b/docs/develop/golang/index-golang.mdx
@@ -218,7 +218,7 @@ Below are few of these apps. [Click here to access the complete lists of apps](h
 
 ![launchpad](images/ratelimitinggo.png)
 
-[Rate Limiting app](http://launchpad.redislabs.com/?id=project%3Abasic-redis-rate-limiting-demo-go-lang) built in Go
+[Rate Limiting app](http://launchpad.redis.com/?id=project%3Abasic-redis-rate-limiting-demo-go-lang) built in Go
 </div>
 </div>
 
@@ -229,7 +229,7 @@ Below are few of these apps. [Click here to access the complete lists of apps](h
 
 ![launchpad](images/leaderboardgo.png)
 
-[How to implement leaderboard app](https://launchpad.redislabs.com/?id=project%3Abasic-redis-leaderboard-demo-python) in Go
+[How to implement leaderboard app](https://launchpad.redis.com/?id=project%3Abasic-redis-leaderboard-demo-python) in Go
 </div>
 </div>
 </div>
