--- a/docs/develop/python/index-python.mdx
+++ b/docs/develop/python/index-python.mdx
@@ -87,10 +87,10 @@ Application that shows how to do rate limiting using various Redis datastructure
 
   ---
 
-###  Redis Marketplace
+###  Redis Launchpad
 
-Redis Marketplace is like an “App Store” for Redis sample apps. You can easily find apps for your preferred frameworks and languages.
-Below are few of these apps. [Click here to access the complete lists of apps](https://marketplace.redislabs.com)
+Redis Launchpad is like an “App Store” for Redis sample apps. You can easily find apps for your preferred frameworks and languages.
+Below are few of these apps. [Click here to access the complete lists of apps](https://launchpad.redis.com)
 
 <div class="row text--center">
 
@@ -100,9 +100,9 @@ Below are few of these apps. [Click here to access the complete lists of apps](h
 #### Rate-Limiting app in Python & Django
 
 
-![marketplace](images/ratelimitingdjango.png)
+![launchpad](images/ratelimitingdjango.png)
 
-[Rate Limiting app](https://marketplace.redislabs.com/?id=project%3Abasic-rate-limiting-demo-python) built in Python & Django
+[Rate Limiting app](https://launchpad.redis.com/?id=project%3Abasic-rate-limiting-demo-python) built in Python & Django
 </div>
 </div>
 
@@ -111,9 +111,9 @@ Below are few of these apps. [Click here to access the complete lists of apps](h
 
 #### Leaderboard app in Python & Django
 
-![marketplace](images/leaderboarddjango.png)
+![launchpad](images/leaderboarddjango.png)
 
-[How to implement leaderboard app](https://marketplace.redislabs.com/?id=project%3Abasic-redis-leaderboard-demo-python) in Python & Django
+[How to implement leaderboard app](https://launchpad.redis.com/?id=project%3Abasic-redis-leaderboard-demo-python) in Python & Django
 </div>
 </div>
 </div>
