--- a/docs/develop/ruby/index-ruby.mdx
+++ b/docs/develop/ruby/index-ruby.mdx
@@ -114,10 +114,10 @@ OK
 
 ```
 
-###  Redis Marketplace
+###  Redis Launchpad
 
-Redis Marketplace is like an “App Store” for Redis sample apps. You can easily find apps for your preferred frameworks and languages.
-Below are few of these apps. [Click here to access the complete lists of apps](https://marketplace.redislabs.com)
+Redis Launchpad is like an “App Store” for Redis sample apps. You can easily find apps for your preferred frameworks and languages.
+Below are few of these apps. [Click here to access the complete lists of apps](https://launchpad.redis.com)
 
 <div class="row text--center">
 
@@ -127,9 +127,9 @@ Below are few of these apps. [Click here to access the complete lists of apps](h
 #### Rate-Limiting app in Ruby on Rails
 
 
-![marketplace](images/ratelimitingruby.png)
+![Launchpad](images/ratelimitingruby.png)
 
-[Rate Limiting app](http://marketplace.redislabs.com/?id=project%3Abasic-redis-rate-limiting-demo-ruby) built in Ruby on Rails
+[Rate Limiting app](http://Launchpad.redis.com/?id=project%3Abasic-redis-rate-limiting-demo-ruby) built in Ruby on Rails
 </div>
 </div>
 
@@ -138,9 +138,9 @@ Below are few of these apps. [Click here to access the complete lists of apps](h
 
 #### Leaderboard app in Ruby on Rails
 
-![marketplace](images/leaderboardruby.png)
+![Launchpad](images/leaderboardruby.png)
 
-[How to implement leaderboard app](https://marketplace.redislabs.com/?id=project%3Abasic-redis-leaderboard-demo-ruby) in Ruby on Rails
+[How to implement leaderboard app](https://Launchpad.redis.com/?id=project%3Abasic-redis-leaderboard-demo-ruby) in Ruby on Rails
 </div>
 </div>
 </div>
