--- a/docs/develop/dotnet/index-dotnet.mdx
+++ b/docs/develop/dotnet/index-dotnet.mdx
@@ -199,10 +199,10 @@ Now that you've retreived the connection to the database, all that's left is to 
 
 </Tabs>
 
-## Redis Marketplace
+## Redis Launchpad
 
-Redis Marketplace is like an “App Store” for Redis sample apps. You can easily find apps for your preferred frameworks and languages. 
-Below are few of these apps. [Click here to access the complete lists of apps](https://marketplace.redislabs.com)
+Redis Launchpad is like an “App Store” for Redis sample apps. You can easily find apps for your preferred frameworks and languages. 
+Below are few of these apps. [Click here to access the complete lists of apps](https://launchpad.redislabs.com)
 
 <div class="row text--center">
 
@@ -211,7 +211,7 @@ Below are few of these apps. [Click here to access the complete lists of apps](h
 
 #### Rate Limiting App in .NET
 
-[![marketplace](images/rate-limiting.png)](https://marketplace.redislabs.com/?id=project%3Abasic-redis-rate-limiting-demo-csharp-dot-net)
+[![Launchpad](images/rate-limiting.png)](https://launchpad.redis.com/?id=project%3Abasic-redis-rate-limiting-demo-csharp-dot-net)
 
 </div>
 </div>
@@ -220,7 +220,7 @@ Below are few of these apps. [Click here to access the complete lists of apps](h
 
 #### Leaderboard App in .NET
 
-[![marketplace](images/leaderboard.png)](https://marketplace.redislabs.com/?id=project%3Abasic-redis-leaderboard-demo-dotnet)
+[![Launchpad](images/leaderboard.png)](https://launchpad.redis.com/?id=project%3Abasic-redis-leaderboard-demo-dotnet)
 
 
 </div>
@@ -234,7 +234,7 @@ Below are few of these apps. [Click here to access the complete lists of apps](h
 
 #### API Caching .NET
 
-[![marketplace](images/cachingMarketplace.png)](https://marketplace.redislabs.com/?id=project%3Abasic-caching-demo-csharpdotnet)
+[![Launchpad](images/cachingMarketplace.png)](https://launchpad.redis.com/?id=project%3Abasic-caching-demo-csharpdotnet)
 
 </div>
 </div>
@@ -244,7 +244,7 @@ Below are few of these apps. [Click here to access the complete lists of apps](h
 
 #### Basic Chat App .NET
 
-[![marketplace](images/chatMarketplace.png)](https://marketplace.redislabs.com/?id=project%3Abasic-redis-chat-app-demo-dotnet)
+[![Launchpad](images/chatMarketplace.png)](https://launchpad.redis.com/?id=project%3Abasic-redis-chat-app-demo-dotnet)
 
 </div>
 </div>
