--- a/docs/howtos/redisjson/using-redisinsight/index-usingredisinsight.mdx
+++ b/docs/howtos/redisjson/using-redisinsight/index-usingredisinsight.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-usingredisinsight
-title: RedisJSON using RedisInsight
+title: How to visualize JSON data using RedisInsight
 sidebar_label: RedisJSON using RedisInsight
 slug: /howtos/redisjson/using-redisinsight
 ---
