--- a/docs/develop/node/gettingstarted/index-gettingstarted.mdx
+++ b/docs/develop/node/gettingstarted/index-gettingstarted.mdx
@@ -134,7 +134,7 @@ Below are few of these apps. [Click here to access the complete lists of apps](h
 <div class="col">
 <div className="ri-container">
 
-#### Shopping Cart app in NodeJS
+#### Shopping Cart application in NodeJS
 
 ![marketplace](images/shoppingcartnodejs.png)
 
