--- a/docs/develop/dotnet/index-dotnet.mdx
+++ b/docs/develop/dotnet/index-dotnet.mdx
@@ -251,7 +251,7 @@ Below are few of these apps. [Click here to access the complete lists of apps](h
 
 </div>
 
-### Additional Resources
+#### Additional Resources
 
 - [Using C# with Redis](https://docs.redislabs.com/latest/rs/references/client_references/client_csharp/)
 - [Using SSL and StackExchange.Redis](https://docs.redislabs.com/latest/rs/references/client_references/client_csharp/)
