--- a/docs/howtos/redisai/index-redisai.mdx
+++ b/docs/howtos/redisai/index-redisai.mdx
@@ -81,7 +81,7 @@ Ensure that Python3.8+ is installed.
  ```
 
 
-### Step 6. Step 3: Build the ONNX Model
+### Step 6. Build the ONNX Model
 
 RedisAI supports DL/ML identifiers and their respective backend libraries, including:
 
