--- a/docs/develop/java/spring/index-spring.mdx
+++ b/docs/develop/java/spring/index-spring.mdx
@@ -1,21 +1,110 @@
 ---
 id: index-spring
-title: Spring
+title: Spring and Redis 
 sidebar_label: Overview
-slug: /develop/java/spring/
+slug: /develop/java/spring
 ---
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
-import useBaseUrl from '@docusaurus/useBaseUrl';
+
 import RedisCard from '@site/src/theme/RedisCard';
 
-#### Data-Driven Applications with Spring Boot and Redis
 
-Spring Boot is the most powerful and popular way to easily create stand-alone,
-production-grade Spring based Applications that you can "just run".
 
-Paired with Redis, Spring and Spring Boot give unrivaled versatility. For a quick,
-tour of some of the cool things you can do with Spring and Redis checkout the session by
-Josh Long and Brian Sam-Bodden at RedisConf 2021:
+The following links provides you with the available options to develop your application using Spring Boot and Redis
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Yq8Cc7eOgF8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div class="row">
+
+ <div class="col">
+     <RedisCard
+        title="Getting Started"
+        description="Spring and Redis"
+        page="/develop/java/redis-and-spring-course"
+        />
+ </div>
+
+  <div class="col">
+     <RedisCard
+        title="Up and Running"
+        description="Configuration of Spring Boot application"
+        page="/develop/java/redis-and-spring-course/lesson_1"
+        />
+  </div>
+  
+  <div class="col">
+     <RedisCard
+        title="Spring Data Redis"
+        description="Configuration of Spring Boot application"
+        page="/develop/java/redis-and-spring-course/lesson_2"
+        />
+  </div>
+</div>
+
+<div class="row">
+
+  <div class="col">
+     <RedisCard
+        title="Object Mapping & Redis Repositories"
+        description="Access different operation bundles to read and write data to Redis from a Spring REST controller"
+        page="/develop/java/redis-and-spring-course/lesson_3"
+        />
+  </div>
+
+  <div class="col">
+     <RedisCard
+        title="User/Roles & Secondary Indexes"
+        description="Creating the user-role domain, load and transform JSON data, and begin crafting the Redi2Read API"
+        page="/develop/java/redis-and-spring-course/lesson_4"
+        />
+  </div>
+  
+  <div class="col">
+     <RedisCard
+        title="Books, Categories & The Catalog"
+        description="Create the Book-Category-Book-Ratings domain, load and transform JSON data, and implement the Books API"
+        page="/develop/java/redis-and-spring-course/lesson_5"
+        />
+  </div>
+</div>
+
+<div class="row">
+
+  <div class="col">
+     <RedisCard
+        title="Domain Models with RedisJSON"
+        description="Add a JSON-backed domain model to Redi2Read using the RedisJSON Redis module."
+        page="/develop/java/redis-and-spring-course/lesson_6"
+        />
+  </div>
+
+
+  <div class="col">
+     <RedisCard
+        title="Search with RediSearch"
+        description="Bridge the querying gap between SQL and NoSQL systems"
+        page="/develop/java/redis-and-spring-course/lesson_7"
+        />
+  </div>
+  
+  <div class="col">
+     <RedisCard
+        title="Recommendations with RedisGraph"
+        description="Build a simple but powerful graph-based recommendation engine in the Redi2Read application"
+        page="/develop/java/redis-and-spring-course/lesson_8"
+        />
+  </div>
+</div>
+
+<div class="row">
+
+  <div class="col">
+     <RedisCard
+        title="Caching REST Services with Redis"
+        description="Learn how easy it is to use Redis as a cache in your Spring applications"
+        page="/develop/java/redis-and-spring-course/lesson_9"
+        />
+  </div>
+
+</div>
+
+
+
+
