--- a/docs/create/docker/index-docker.mdx
+++ b/docs/create/docker/index-docker.mdx
@@ -163,3 +163,9 @@ If persistence is enabled, data is stored in the VOLUME /data, which can be used
 
 - [Connect to Redis database using RedisInsight](/explore/redisinsight/)
 - [Connect to Redis database using Redis datasource for Grafana](/explore/redisdatasource/)
+
+##
+
+<div>
+<a href="https://launchpad.redis.com" target="_blank" rel="noopener" className="link"> <img src="/img/launchpad.png"  className="thumb" loading="lazy" alt="Redis Launchpad" /></a>
+</div>
