--- a/docs/create/gcp/index-gcp.mdx
+++ b/docs/create/gcp/index-gcp.mdx
@@ -58,3 +58,9 @@ Launch [Redis Enterprise Cloud page](https://console.cloud.google.com/apis/libra
 
 - [Connecting to the database using RedisInsight](/explore/redisinsight/)
 - [How to list & search Movies database using Redisearch](/howtos/shoppingcart/)
+
+##
+
+<div>
+<a href="https://launchpad.redis.com" target="_blank" rel="noopener" className="link"> <img src="/img/launchpad.png"  className="thumb" loading="lazy" alt="Redis Launchpad" /></a>
+</div>
