--- a/docs/create/heroku/index-heroku.mdx
+++ b/docs/create/heroku/index-heroku.mdx
@@ -335,3 +335,9 @@ Click "Open App" on the top right corner.
 
 - [How to build Java based Rate Limiting application on Heroku using Redis](/howtos/herokujava)
 - [How to build NodeJS based Rate Limiting application on Heroku using Redis](/howtos/herokunodejs)
+
+##
+
+<div>
+<a href="https://launchpad.redis.com" target="_blank" rel="noopener" className="link"> <img src="/img/launchpad.png"  className="thumb" loading="lazy" alt="Redis Launchpad" /></a>
+</div>
