--- a/docs/create/homebrew/index-homebrew.mdx
+++ b/docs/create/homebrew/index-homebrew.mdx
@@ -98,3 +98,9 @@ Please note: By default, Redis has 0-15 indexes for databases, you can change th
 - [Connect to Redis database using RedisInsight](/explore/redisinsight)
 - [Develop with Java and Redis](/develop/java)
 - [Develop with Python and Redis](/develop/python)
+
+##
+
+<div>
+<a href="https://launchpad.redis.com" target="_blank" rel="noopener" className="link"> <img src="/img/launchpad.png"  className="thumb" loading="lazy" alt="Redis Launchpad" /></a>
+</div>
