--- a/docs/create/kubernetes/index-kubernetes.mdx
+++ b/docs/create/kubernetes/index-kubernetes.mdx
@@ -155,3 +155,10 @@ Open  https://localhost:8443 on the browser to see the Redis Enterprise Software
 - [Redis Labs Kubernetes Architecture](https://docs.redislabs.com/latest/platforms/kubernetes/concepts/architecture/)
 - [Redis Enterprise Kubernetes Operator-based Architecture](https://docs.redislabs.com/latest/platforms/kubernetes/concepts/operator/)
 - [Sizing and Scaling a Redis Enterprise Cluster Deployment on Kubernetes](https://docs.redislabs.com/latest/platforms/kubernetes/concepts/sizing-on-kubernetes/)
+
+
+##
+
+<div>
+<a href="https://launchpad.redis.com" target="_blank" rel="noopener" className="link"> <img src="/img/launchpad.png"  className="thumb" loading="lazy" alt="Redis Launchpad" /></a>
+</div>
