--- a/docs/develop/python/index-python.mdx
+++ b/docs/develop/python/index-python.mdx
@@ -135,3 +135,9 @@ A complete introduction to Redis for Python developers.
 - [Python based application on Heroku using Redis](https://developer.redislabs.com/howtos/herokupython/)
 - [How to build a Rate Limiter using Redis](https://developer.redislabs.com/howtos/ratelimiting/)
 - [Writing Your Serverless function using RedisGears Browser Tool](https://developer.redislabs.com/explore/redisinsight/redisgears/)
+
+##
+
+<div>
+<a href="https://launchpad.redis.com" target="_blank" rel="noopener" className="link"> <img src="/img/launchpad.png"  className="thumb" loading="lazy" alt="Redis Launchpad" /></a>
+</div>
