--- a/docs/explore/redisinsight/getting-started/index-gettingstarted.mdx
+++ b/docs/explore/redisinsight/getting-started/index-gettingstarted.mdx
@@ -507,4 +507,8 @@ You can see the output displayed at the top of the screen. If it says “OK,” 
 - [Manage Your Redis Cluster using RedisInsight](/explore/redisinsight/cluster)
 - [Using Redis Streams with RedisInsight](/explore/redisinsight/streams)
 
+##
 
+<div>
+<a href="https://launchpad.redis.com" target="_blank" rel="noopener" className="link"> <img src="/img/launchpad.png"  className="thumb" loading="lazy" alt="Redis Launchpad" /></a>
+</div>
