--- a/docs/explore/redisinsight/profiler/index-profiler.mdx
+++ b/docs/explore/redisinsight/profiler/index-profiler.mdx
@@ -302,4 +302,8 @@ Hence, the profiler provides the below statistical details:
 - [Memory Analysis using RedisInsight](/explore/redisinsight/memoryanalyzer)
 - [Using Redis Streams with RedisInsight](/explore/redisinsight/streams)
 
+##
 
+<div>
+<a href="https://launchpad.redis.com" target="_blank" rel="noopener" className="link"> <img src="/img/launchpad.png"  className="thumb" loading="lazy" alt="Redis Launchpad" /></a>
+</div>
