--- a/docs/explore/redisinsight/redisearch/index-redisearch.mdx
+++ b/docs/explore/redisinsight/redisearch/index-redisearch.mdx
@@ -443,3 +443,9 @@ The FT.SEARCH syntax has two ways to query numeric fields:
 - [Memory Analysis using RedisInsight](/explore/redisinsight/memoryanalyzer)
 - [Visualize Redis database keys using RedisInsight Browser Tool](/explore/redisinsight/browser)
 - [Using Redis Streams with RedisInsight](/explore/redisinsight/streams)
+
+##
+
+<div>
+<a href="https://launchpad.redis.com" target="_blank" rel="noopener" className="link"> <img src="/img/launchpad.png"  className="thumb" loading="lazy" alt="Redis Launchpad" /></a>
+</div>
