--- a/docs/explore/redisinsight/redisgears/index-redisgears.mdx
+++ b/docs/explore/redisinsight/redisgears/index-redisgears.mdx
@@ -118,4 +118,8 @@ GB('KeysOnlyReader').map(lambda x: execute('hget', x, 'genres')).flatmap(lambda 
 - [How to build a Fraud Detection System using RedisGears and RedisBloom](/howtos/frauddetection)
 - [Building a Pipeline for Natural Language Processing using RedisGears](/howtos/nlp)
 
+##
 
+<div>
+<a href="https://launchpad.redis.com" target="_blank" rel="noopener" className="link"> <img src="/img/launchpad.png"  className="thumb" loading="lazy" alt="Redis Launchpad" /></a>
+</div>
