--- a/docs/explore/redisinsight/redisgraph/index-redisgraph.mdx
+++ b/docs/explore/redisinsight/redisgraph/index-redisgraph.mdx
@@ -281,4 +281,9 @@ GRAPH.QUERY GOT_DEMO "MATCH (w:writer)-[wrote]->(b:book) return w,b"
 - [Visualize Redis database keys using RedisInsight Browser Tool](/explore/redisinsight/browser)
 - [Using Redis Streams with RedisInsight](/explore/redisinsight/streams)
 
+##
+
+<div>
+<a href="https://launchpad.redis.com" target="_blank" rel="noopener" className="link"> <img src="/img/launchpad.png"  className="thumb" loading="lazy" alt="Redis Launchpad" /></a>
+</div>
 
