--- a/docs/explore/redisinsight/slowlog/index-slowlog.mdx
+++ b/docs/explore/redisinsight/slowlog/index-slowlog.mdx
@@ -218,3 +218,8 @@ In a clustered database, each node can have different values for slowlog.  You w
 - [Debugging Redis using RedisInsight Slowlog Tool](/explore/redisinsight/slowlog)
 - [Using Redis Streams with RedisInsight](/explore/redisinsight/streams)
 
+##
+
+<div>
+<a href="https://launchpad.redis.com" target="_blank" rel="noopener" className="link"> <img src="/img/launchpad.png"  className="thumb" loading="lazy" alt="Redis Launchpad" /></a>
+</div>
