--- a/docs/explore/redisinsight/autodiscover/index-autodiscover.mdx
+++ b/docs/explore/redisinsight/autodiscover/index-autodiscover.mdx
@@ -164,3 +164,9 @@ Add the discovered instance:
 - [Analyze Your Redis commands using RedisInsight Profiler tool](/explore/redisinsight/profiler)
 - [Debugging Redis using RedisInsight Slowlog Tool](/explore/redisinsight/slowlog)
 - [Using Redis Streams with RedisInsight](/explore/redisinsight/streams)
+
+##
+
+<div>
+<a href="https://launchpad.redis.com" target="_blank" rel="noopener" className="link"> <img src="/img/launchpad.png"  className="thumb" loading="lazy" alt="Redis Launchpad" /></a>
+</div>
