--- a/docs/explore/redisinsight/browser/index-browser.mdx
+++ b/docs/explore/redisinsight/browser/index-browser.mdx
@@ -206,3 +206,11 @@ RedisInsight CLI lets you run commands against a redis server. You don’t need 
 - [Slowlog Configuration using RedisInsight](/explore/redisinsight/slowlog)
 - [Explore Redis keys using RedisInsight browser tool](/explore/redisinsight/browser)
 - [Memory Analysis using RedisInsight](/explore/redisinsight/memoryanalyzer)
+
+##
+
+<div>
+<a href="https://launchpad.redis.com" target="_blank" rel="noopener" className="link"> <img src="/img/launchpad.png"  className="thumb" loading="lazy" alt="Redis Launchpad" /></a>
+</div>
+
+
