--- a/docs/explore/redisinsight/usinghelm/index-usinghelm.mdx
+++ b/docs/explore/redisinsight/usinghelm/index-usinghelm.mdx
@@ -132,3 +132,9 @@ Install Docker Desktop for Mac and enable Kubernetes as shown below:
 - [Analyze Your Redis commands using RedisInsight Profiler tool](/explore/redisinsight/profiler)
 - [Debugging Redis using RedisInsight Slowlog Tool](/explore/redisinsight/slowlog)
 - [Using Redis Streams with RedisInsight](/explore/redisinsight/streams)
+
+##
+
+<div>
+<a href="https://launchpad.redis.com" target="_blank" rel="noopener" className="link"> <img src="/img/launchpad.png"  className="thumb" loading="lazy" alt="Redis Launchpad" /></a>
+</div>
