Added RedisGraph Tutorial for RedisInsight

--- a/docs/howtos/redisgraph/index-redisgraph.mdx
+++ b/docs/howtos/redisgraph/index-redisgraph.mdx
@@ -28,4 +28,16 @@ The following links provides you with the available options to get started with 
         page="/howtos/redisgraph/explore-python-code"
         />
  </div>
+
+ <div class="col">
+    <RedisCard
+        title="How to visualize Graph data using RedisInsight"
+        description="RedisGraph using RedisInsight"
+        page="/howtos/redisgraph/using-redisinsight"
+        />
+ </div>
+
+
+
+
 </div>
