--- a/docs/explore/redisinsight/index-redisinsight.mdx
+++ b/docs/explore/redisinsight/index-redisinsight.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-redisinsight
-title: RedisInsight
+title: RedisInsight Tutorials
 sidebar_label: Overview
 slug: /explore/redisinsight
 ---
