--- a/docs/explore/redisinsight/getting-started/index-gettingstarted.mdx
+++ b/docs/explore/redisinsight/getting-started/index-gettingstarted.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-gettingstarted
-title: RedisInsight
+title: New To RedisInsight
 sidebar_label: Getting Started 
 slug: /explore/redisinsight/getting-started
 ---
@@ -19,7 +19,7 @@ RedisInsight provides built-in support for the RedisJSON, RediSearch, RedisGraph
 
 A full-featured pure desktop GUI client, RedisInsight is available for Windows, macOS, and Linux and is fully compatible with Redis Enterprise. It works with any cloud provider as long as you run it on a host with network access to your cloud-based Redis server. RedisInsight makes it easy to discover cloud databases and configure connection details with a single click. It allows you to automatically add Redis Enterprise Software and Redis Enterprise Cloud databases. 
 
-### Getting Started
+### Getting Started with RedisInsight
 
 <Tabs
   defaultValue="MacOS"
