--- a/docs/explore/redisinsight/redistimeseries/index-redistimeseries.mdx
+++ b/docs/explore/redisinsight/redistimeseries/index-redistimeseries.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-redistimeseries
-title: Managing time-series data using RedisTimeSeries Browser Tool
-sidebar_label: Managing time-series data using RedisTimeSeries Browser Tool  
+title: Manage Redis time-series data using RedisTimeSeries Browser Tool
+sidebar_label: Manage Redis time-series data using RedisTimeSeries Browser Tool 
 slug: /explore/redisinsight/redistimeseries
 ---
 
