--- a/docs/explore/redisinsight/cluster/index-cluster.mdx
+++ b/docs/explore/redisinsight/cluster/index-cluster.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-cluster
 title: Manage Your Redis Cluster using RedisInsight Cluster Management Tool
-sidebar_label: Manage Your Redis Cluster 
+sidebar_label: Manage Your Redis Cluster using RedisInsight Cluster Management Tool 
 slug: /explore/redisinsight/cluster
 ---
 
