--- a/docs/explore/redisinsight/autodiscover/index-autodiscover.mdx
+++ b/docs/explore/redisinsight/autodiscover/index-autodiscover.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-autodiscover
-title: Autodiscover Elasticache Redis caches using RedisInsight
-sidebar_label: Autodiscover Elasticache Redis caches using RedisInsight
+title: Elasticache Auto Discovery Using RedisInsight Tutorial | Redis Developer Hub
+sidebar_label: Utilize Elasticache Auto Discovery For Redis with RedisInsight
 slug: /explore/redisinsight/autodiscover
 ---
 
