--- a/docs/explore/redisinsight/index-redisinsight.mdx
+++ b/docs/explore/redisinsight/index-redisinsight.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-redisinsight
-title: RedisInsight Tutorials
+title: RedisInsight Developer Hub for Redis Interactive Tutorials
 sidebar_label: Overview
 slug: /explore/redisinsight
 ---
@@ -17,9 +17,9 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
  <div class="col">
      <RedisCard
-        title="Getting Started"
+        title="New to RedisInsight"
         imgPath="redisinsight.png"
-        description="Install RedisInsight on Mac, Linux, Docker & Kubernetes"
+        description="Getting started with RedisInsight"
         preview="redisinsight.png"
         page="/explore/redisinsight/getting-started"
         />
@@ -28,9 +28,9 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
  <div class="col">
      <RedisCard
-        title="Browser Tool"
+        title="RedisInsight Browser Visualization Tutorial"
         imgPath="redisinsight.png"
-        description="Explore keys in your Redis database in real-time"
+        description="Visualize Redis database keys using RedisInsight Browser Tool"
         preview="redisinsight.png"
         page="/explore/redisinsight/browser"
         />
@@ -39,8 +39,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
  <div class="col">
     <RedisCard
-        title="Slowlog Analysis"
-        description="Troubleshoot performance issue in your Redis server"
+        title="How To Use RedisInsight Slowlog Debugging Tool"
+        description="Debug Redis using RedisInsight Slowlog Debugging Tool"
         page="/explore/redisinsight/slowlog"
         />
  </div>
@@ -49,8 +49,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
  <div class="col">
     <RedisCard
-        title="Memory Analysis"
-        description="Improve your application performance"
+        title="RedisInsight Memory Analyzer Tutorial "
+        description="Optimize & Analyze Redis using RedisInsight Memory Analyzer Tool"
         page="/explore/redisinsight/memoryanalyzer"
         />
  </div>
@@ -58,9 +58,9 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
  <div class="col">
      <RedisCard
-        title="Cluster Management"
+        title="How To Use RedisInsight Cluster Management Tool"
         imgPath="redisinsight.png"
-        description="A GUI to manage your Redis Cluster with ease"
+        description="Manage Your Redis Cluster using RedisInsight Cluster Management Tool"
         preview="redisinsight.png"
         page="/explore/redisinsight/cluster"
         />
@@ -68,9 +68,9 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
  <div class="col">
      <RedisCard
-        title="Using Redis Streams"
+        title="RedisInsight For Redis Streams Tutorial"
         imgPath="redisinsight.png"
-        description="A Real-time data processing & effective managing data consumption "
+        description="Use Redis Streams Consumer Groups with RedisInsight"
         preview="redisinsight.png"
         page="/explore/redisinsight/streams"
         />
@@ -82,8 +82,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
  <div class="col">
     <RedisCard
-        title="Profiler Analysis Tool"
-        description="Analyze Your Redis commands using Profiler Analysis tool"
+        title="How To Use RedisInsight Profiler Tool | Redis Developer Hub"
+        description="Analyze Your Redis Commands Using Redis Monitor Command"
         page="/explore/redisinsight/profiler"
         />
  </div>
@@ -91,9 +91,9 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
  <div class="col">
      <RedisCard
-        title="RedisGraph Browser Tool"
+        title="RedisGraph Browser Visualization Tutorial "
         imgPath=""
-        description="Query, Visualize and Manipulate Graphs using RedisGraph Browser Tool"
+        description="Query, Visualize and Manipulate Graphs using RedisGraph Browser Visualization Tool"
         preview="redisinsight.png"
         page="/explore/redisinsight/redisgraph"
         />
@@ -101,9 +101,9 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
  <div class="col">
      <RedisCard
-        title="RedisGears Browser Tool"
+        title="How To Use Serverless RedisGears Browser Tool"
         imgPath="redisinsight.png"
-        description="Writing Your Serverless function using RedisGears browser tool"
+        description="Write Your Serverless Redis function using RedisGears Browser Tool"
         preview="redisinsight.png"
         page="/explore/redisinsight/redisgears"
         />
@@ -115,8 +115,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
  <div class="col">
     <RedisCard
-        title="RedisTimeSeries Browser Tool"
-        description="Managing time-series data using RedisTimeSeries Browser Tool"
+        title="RedisTimeSeries Data Management Tutorial"
+        description="Manage Redis time-series data using RedisTimeSeries Browser Tool"
         page="/explore/redisinsight/redistimeseries"
         />
  </div>
@@ -124,9 +124,9 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
  <div class="col">
      <RedisCard
-        title="RediSearch Browser Tool"
+        title="How To Use RediSearch Browser Tool"
         imgPath=""
-        description="Unified Search and Analytics using RediSearch Browser tool"
+        description="Perform Database Search and Analytics using RediSearch Browser Tool"
         preview="redisinsight.png"
         page="/explore/redisinsight/redisearch"
         />
@@ -135,9 +135,9 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
   <div class="col">
      <RedisCard
-        title="Autodiscover Elasticache"
+        title="Elasticache Auto Discovery Using RedisInsight Tutorial"
         imgPath=""
-        description="Autodiscover Amazon Elasticache instances using RedisInsight"
+        description="Utilize Elasticache Auto Discovery For Redis with RedisInsight"
         preview="redisinsight.png"
         page="/explore/redisinsight/autodiscover"
         />
