--- a/docs/explore/redisinsight/redisearch/index-redisearch.mdx
+++ b/docs/explore/redisinsight/redisearch/index-redisearch.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-redisearch
-title: Unified Search and Analytics using RediSearch Browser Tool
-sidebar_label: Unified Search and Analytics using RediSearch Browser Tool
+title: Perform Database Search and Analytics using RediSearch Browser Tool
+sidebar_label: Perform Database Search and Analytics using RediSearch Browser Tool
 slug: /explore/redisinsight/redisearch
 ---
 
