--- a/docs/explore/redisinsight/slowlog/index-slowlog.mdx
+++ b/docs/explore/redisinsight/slowlog/index-slowlog.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-slowlog
-title: Debugging Redis using RedisInsight Slowlog Tool 
-sidebar_label: Debugging Redis using Slowlog
+title: Debug Redis using RedisInsight Slowlog Debugging Tool
+sidebar_label: Debug Redis using RedisInsight Slowlog Debugging Tool
 slug: /explore/redisinsight/slowlog
 ---
 
