--- a/docs/explore/redisinsight/streams/index-streams.mdx
+++ b/docs/explore/redisinsight/streams/index-streams.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-streams
-title: Using Redis Streams with RedisInsight
-sidebar_label: Using Redis Streams
+title: Use Redis Streams Consumer Groups with RedisInsight
+sidebar_label: Use Redis Streams Consumer Groups with RedisInsight
 slug: /explore/redisinsight/streams
 ---
 
