--- a/docs/explore/redisinsight/profiler/index-profiler.mdx
+++ b/docs/explore/redisinsight/profiler/index-profiler.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-profiler
-title: RedisInsight Profiler Tool - Analyze Your Redis Commands Using Redis Monitor Command
+title: How To Use RedisInsight Profiler Tool 
 sidebar_label: RedisInsight Profiler Tool - Analyze Your Redis Commands Using Redis Monitor Command
 slug: /explore/redisinsight/profiler
 ---
