--- a/docs/explore/redisinsight/redisgraph/index-redisgraph.mdx
+++ b/docs/explore/redisinsight/redisgraph/index-redisgraph.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-redisgraph
-title: Query, Visualize and Manipulate Graphs using RedisGraph Browser Tool
-sidebar_label: Query and Manipulate Graphs using RedisGraph Browser Tool 
+title: Query, Visualize and Manipulate Graphs using RedisGraph Browser Visualization Tool
+sidebar_label: Query, Visualize and Manipulate Graphs using RedisGraph Browser Visualization Tool
 slug: /explore/redisinsight/redisgraph
 ---
 
