--- a/docs/howtos/redisjson/getting-started/index-gettingstarted.mdx
+++ b/docs/howtos/redisjson/getting-started/index-gettingstarted.mdx
@@ -10,23 +10,63 @@ The RedisJSON module provides in-memory manipulation of JSON documents at high v
 
 ### Step 1. Register and subscribe
 
-Follow [this link to register](/create/cloud/rediscloud) and subscribe to Redis Enterprise Cloud
 
-![RedisJSON](redisjson3.png)
+Create your free <a href="https://redislabs.com/try-free/" target="_blank" rel="noopener">Redis Enterprise Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
 
-### Step 2. Create a database with RedisJSON Module
-
-![RedisJSON](redisjson1.png)
+![image](deployment.png)
 
 
-### Step 3. Connect to a database
+### Step 2. Create Your subscription
+
+Next, you will have to create  Redis Enterprise Cloud subscription. In the Redis Enterprise Cloud menu, click "Create your Subscription".
+
+![My Image](create_subscription.png)
+
+
+### Step 3. Select the right Subscription Plan
+
+Select "Fixed Plan" for low throughout application as for now.
+
+![My Image](select_subscription.png)
+
+### Step 4.  Select cloud vendor
+
+For the cloud provider, select your preferred cloud (for demo purpose)
+
+![My Image](select_cloud.png)
+
+### Step 5. Click "Create Subscription"
+
+Finally, click on "Create Subscription" button.
+
+![My Image](final_subscription.png)
+
+You can now verify the subscription as shown below:
+
+![My Image](Verify_subscription.png)
+
+### Step 6. Create database
+
+Click "Create Database". Enter database name and your preferred module.
+
+![My Image](create_database.png)
+
+
+
+### Step 7. Launch database
+
+Click "Activate" and wait for few seconds till it gets activated. Once fully activated, you will see the database endpoints as shown below:
+
+![My Image](launch_database.png)
+
+### Step 8. Connect to a database
 
 
 Follow [this](explore/redisinsight) link to know how to connect to a database
 
 
 
-### Step 4. Getting Started with RedisJSON
+### Step 9. Getting Started with RedisJSON
 
 
 The following steps use some basic RedisJSON commands. You can run them from the Redis command-line interface (redis-cli) or use the CLI available in RedisInsight. 
