--- a/docs/develop/java/spring/rate-limiting/getting-started/getting-started.mdx
+++ b/docs/develop/java/spring/rate-limiting/getting-started/getting-started.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-rate-limiting
-title: Rate Limiting
-sidebar_label: Rate Limiting
+title: How to implement Rate Limiting in Spring Applications using Redis
+sidebar_label: How to implement Rate Limiting in Spring Applications using Redis
 slug: /develop/java/spring/rate-limiting
 ---
 import Tabs from '@theme/Tabs';
