Added Image for Rate Limiting

--- a/docs/develop/java/spring/rate-limiting/getting-started/getting-started.mdx
+++ b/docs/develop/java/spring/rate-limiting/getting-started/getting-started.mdx
@@ -15,6 +15,9 @@ Author: [Brian Sam-Bodden](https://www.linkedin.com/in/sambodden/)
 
 In this series of mini-tutorials we'll explore several approaches to implement rate limiting in Spring applications using Redis. We’ll start with the most basic of Redis recipes and we’ll slowly increase the complexity of our implementations.
 
+![my image](ratelimiting_speed.png)
+
+
 ## What is Rate Limiting?
 
 Rate Limiting entails techniques to regulate the number of requests a particular client can make against a networked service. It caps the total number and/or the frequency of requests.
