Added Image for Rate Limiting

--- a/docs/develop/java/spring/rate-limiting/getting-started/getting-started.mdx
+++ b/docs/develop/java/spring/rate-limiting/getting-started/getting-started.mdx
@@ -10,7 +10,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
 
 
-Author: [Brian Sam-Bodden](https://www.linkedin.com/in/sambodden/)
+Author: [Brian Sam-Bodden](https://twitter.com/bsbodden)
 
 
 In this series of mini-tutorials we'll explore several approaches to implement rate limiting in Spring applications using Redis. We’ll start with the most basic of Redis recipes and we’ll slowly increase the complexity of our implementations.
