--- a/docs/develop/java/spring/rate-limiting/getting-started/getting-started.mdx
+++ b/docs/develop/java/spring/rate-limiting/getting-started/getting-started.mdx
@@ -45,3 +45,16 @@ Redis is especially positioned as a platform to implement rate limiting for seve
 * **The Right Abstractions**: Redis provides optimized data structures to support several of the most common rate limiter implementations and with i’s built-in TTL (time-to-live controls) it allows for efficient management of memory. Counting things is a built-in feature in Redis and one of the many areas where Redis shines above the competition.
 
 Now, let’s get started with our first implementation; the simple [“Fixed Window” implementation](/develop/java/spring/rate-limiting/fixed-window).
+
+##
+
+<div>
+<a href="https://launchpad.redis.com" target="_blank" rel="noopener" className="link"> <img src="/img/launchpad.png"  className="thumb" loading="lazy" alt="Redis Launchpad" /></a>
+
+</div>
+
+## Further Readings
+
+- [Getting Started with Spring Boot and Redis](/develop/java/redis-and-spring-course/)
+- [Introducing Spring Data Redis](/develop/java/redis-and-spring-course/lesson_2)
+- [Full-text search and Auto-complete using Redis](/develop/java/redis-and-spring-course/lesson_7)
